fix tag selection visibility

--- a/src/main.css
+++ b/src/main.css
@@ -275,6 +275,10 @@ a.card:focus {
   padding: 0.25rem 1rem;
   border-radius: 100vmax;
 }
+.tag::selection {
+  background: var(--black);
+  color: var(--white);
+}
 
 /* Gallery */
 .gallery {
